--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,47 +1,47 @@
-<my-header [title]="operateTitle"></my-header>
+<app-my-header [title]="operateTitle"></app-my-header>
 <div class="operate">
   <form #contactForm="ngForm" (ngSubmit)="submitForm()">
     <ul>
       <li>
-        <label>姓名：</label>
+        <label for="contactName">姓名：</label>
         <p>
-          <input type="text" value="{{contact.name}}"
+          <input type="text" id="contactName" value="{{contact.name}}"
           [(ngModel)]="contact.name" name="name"
            (blur)="onBlurName()">
           <i *ngIf="nameTip" [ngClass]="{green: isName, red: !isName}"></i>
         </p>
       </li>
       <li>
-        <label>电话：</label>
+        <label for="contactTelNum">电话：</label>
         <p>
-          <input type="text" value="{{contact.telNum}}"
+          <input type="text" id="contactTelNum" value="{{contact.telNum}}"
           [(ngModel)]="contact.telNum" name="telNum"
           (blur)="onBlurPhone()">
           <i *ngIf="phoneTip" [ngClass]="{green: isPhoneNum, red: !isPhoneNum}"></i>
         </p>
       </li>
       <li>
-        <label>住址：</label>
+        <label for="contactAddress">住址：</label>
         <p>
-          <input type="text" value="{{contact.address}}"
+          <input type="text" id="contactAddress" value="{{contact.address}}"
           [(ngModel)]="contact.address" name="address"
           (blur)="onBlurAddr()">
           <i *ngIf="addrTip" [ngClass]="{green: isAddr, red: !isAddr}"></i>
         </p>
       </li>
       <li>
-        <label>邮箱：</label>
+        <label for="contactEmail">邮箱：</label>
         <p>
-          <input type="text" value="{{contact.email}}"
+          <input type="text" id="contactEmail" value="{{contact.email}}"
           [(ngModel)]="contact.email" name="email"
           (blur)="onBlurEmail()">
           <i *ngIf="emailTie" [ngClass]="{green: isEmail, red: !isEmail}"></i>
         </p>
       </li>
       <li>
-        <label>生日：</label>
+        <label for="contactBirthday">生日：</label>
         <p>
-          <input type="text" value="{{contact.birthday}}"
+          <input type="text" id="contactBirthday" value="{{contact.birthday}}"
           [(ngModel)]="contact.birthday" name="birthday"
           (blur)="onBlurBir()"  placeholder="日期格式如:1990/10/12">
           <i *ngIf="birTip" [ngClass]="{green: isBir, red: !isBir}"></i>
@@ -49,8 +49,8 @@
       </li>
     </ul>
     <div class="btn">
-      <button type="submit" class="fl" btnClickStyle>保存</button>
-      <button (click)="cancleOperate()" class=" fr">取消</button>
+      <button type="submit" class="fl" appBtnClickStyle>保存</button>
+      <button (click)="cancelOperation()" class=" fr">取消</button>
     </div>
   </form>
 </div>
