--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,7 +1,7 @@
-<my-header title="所有联系人" [isShowCreateButton]="true"></my-header>
+<app-my-header title="所有联系人" [isShowCreateButton]="true"></app-my-header>
 <ul class="list">
   <li *ngFor="let contact of contacts">
     <app-list-item [contact]="contact" (routerNavigate)="routerNavigate($event)"></app-list-item>
   </li>
 </ul>
-<my-footer></my-footer>
+<app-my-footer></app-my-footer>
